refactor: refactor some methods in this project