@@ -1,10 +1,8 @@
 package com.diego.desafio_goat_b.service;
 
 import com.diego.desafio_goat_b.domain.entity.AccountPayable;
-import com.diego.desafio_goat_b.domain.entity.Payment;
 import com.diego.desafio_goat_b.domain.entity.Supplier;
 import com.diego.desafio_goat_b.dto.AccountPayableDTO;
-import com.diego.desafio_goat_b.dto.PaymentDTO;
 import com.diego.desafio_goat_b.exception.ResourceNotFoundException;
 import com.diego.desafio_goat_b.mapper.AccountPayableMapper;
 import com.diego.desafio_goat_b.repository.AccountPayableRepository;
@@ -13,7 +11,6 @@ import org.springframework.stereotype.Service;
 
 import java.util.List;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 @RequiredArgsConstructor
 @Service
@@ -29,16 +26,16 @@ public class AccountPayableService {
         AccountPayable account = new AccountPayable();
         account = accountPayableMapper.toEntity(account, dto);
         account.setSupplier(supplier);
-        accountPayableRepository.save(account);
-        return dto;
+        AccountPayable savedaAccount = accountPayableRepository.save(account);
+        return accountPayableMapper.toDTO(savedaAccount);
     }
 
     public AccountPayableDTO update(UUID id, AccountPayableDTO dto) {
         AccountPayable account = accountPayableRepository.findById(id)
                 .orElseThrow(() -> new ResourceNotFoundException("AccountPayable not found"));
         account = accountPayableMapper.toEntity(account, dto);
-        accountPayableRepository.save(account);
-        return dto;
+        AccountPayable savedaAccount = accountPayableRepository.save(account);
+        return accountPayableMapper.toDTO(savedaAccount);
     }
 
     public void delete(UUID id) {
@@ -54,7 +51,14 @@ public class AccountPayableService {
         return accountPayableRepository.findAll()
                 .stream()
                 .map(accountPayableMapper::toDTO)
-                .collect(Collectors.toList());
+                .toList();
+    }
+
+    public List<AccountPayableDTO> findBySupplierId(UUID suplierId) {
+        return accountPayableRepository.findBySupplier_Id(suplierId)
+                .stream()
+                .map(accountPayableMapper::toDTO)
+                .toList();
     }
 }
 
